# face-detector-loopback

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FaceDetectorLoopback  FaceTest  LoopbackCameraTest  Makefile  OpenCVTest  cmake_install.cmake  config.conf  readme.md  run.sh
src/: CaffeFaceDetector.hpp  CaptureDevice.hpp  ConfigReader.hpp  DetectionResultInterpolator.hpp  Exception.hpp  FaceDetector.hpp  OutputVideoDevice.hpp  face-detector-loopback.cpp  face-detector-test.cpp  loopback-camera-test.cpp  opencv-test.cpp
test/: package.json  webpack.config.js
test/src/: babylon-js-example.js  main.js  media-source-example.js
